--- a/html/meet.html
+++ b/html/meet.html
@@ -27,7 +27,7 @@
 <p>We will use the <code>Maybe</code> type constructor
 throughout this chapter, so you should familiarize yourself with the
 definition and usage of
-<a href="http://www.haskell.org/onlinelibrary/maybe.html">
+<a href="https://wiki.haskell.org/Maybe">
 <code>Maybe</code></a> before continuing.
 </p>
 
